create tables on new environment. fix